# sieve-of-eratosthenes

./: Cargo.toml  README.md
src/: cli.rs  helpers.rs  main.rs  sieve.rs
